--- a/nuget/Softeq.ZendeskBelvedereCore.nuspec
+++ b/nuget/Softeq.ZendeskBelvedereCore.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskBelvedereCore</id>
-        <version>3.0.5.3</version>
+        <version>3.0.5</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,10 +10,10 @@
         <summary>Xamarin.Android binding library for Zendesk Belvedere Core</summary>
         <description>Media picker for Android.</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android, picker</tags>
         <dependencies>
             <!-- https://github.com/zendesk/belvedere/blob/v3.0.5/belvedere-core/build.gradle -->
@@ -25,6 +25,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/BelvedereCore.Bindings.Droid/bin/Release/BelvedereCore.Bindings.Droid.dll" target="lib/monoandroid12.0/BelvedereCore.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/BelvedereCore.Bindings.Droid/bin/Release/BelvedereCore.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
