--- a/nuget/Softeq.ZendeskJavaCommon.nuspec
+++ b/nuget/Softeq.ZendeskJavaCommon.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskJavaCommon</id>
-        <version>2.0.0.3</version>
+        <version>2.0.0</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,22 +10,23 @@
         <summary>Xamarin.Android binding library for Zendesk JavaCommon</summary>
         <description>Zendesk Java Common classes</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
                 <dependency id="GoogleGson" version="2.8.9.3" />
-                <dependency id="Square.OkHttp3" version="4.9.2.3" />
-                <dependency id="Square.Retrofit2.ConverterGson" version="2.9.0" />
                 <dependency id="Square.Retrofit2" version="2.9.0" />
                 <dependency id="Xamarin.Kotlin.StdLib" version="1.6.10" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/JavaCommon.Bindings.Droid/bin/Release/JavaCommon.Bindings.Droid.dll" target="lib/monoandroid12.0/JavaCommon.Bindings.Droid.dll" />
+<file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/JavaCommon.Bindings.Droid/bin/Release/JavaCommon.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
