--- a/nuget/Softeq.ZendeskMessaging.Droid.nuspec
+++ b/nuget/Softeq.ZendeskMessaging.Droid.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskMessaging.Droid</id>
-        <version>5.2.5.3</version>
+        <version>5.2.5</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,33 +10,32 @@
         <summary>Xamarin.Android binding library for Zendesk Messaging SDK</summary>
         <description>Zendesk Messaging SDK</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
-                <dependency id="Softeq.ZendeskBelvedere" version="3.0.5.3" />
-                <dependency id="Softeq.ZendeskBelvedereCore" version="3.0.5.3" />
-                <dependency id="Softeq.ZendeskCommonUI.Droid" version="4.0.5.3" />
-                <dependency id="Softeq.ZendeskSDKConfigurations.Droid" version="2.0.3.3" />
-                <dependency id="Softeq.ZendeskMessagingApi.Droid" version="5.2.5.3" />
+                <dependency id="Softeq.ZendeskBelvedere" version="3.0.5" />
+                <dependency id="Softeq.ZendeskBelvedereCore" version="3.0.5" />
+                <dependency id="Softeq.ZendeskCommonUI.Droid" version="4.0.5" />
+                <dependency id="Softeq.ZendeskSDKConfigurations.Droid" version="2.0.3" />
+                <dependency id="Softeq.ZendeskMessagingApi.Droid" version="5.2.5" />
 
-                <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Square.Picasso" version="2.8.0.5" />
-                <dependency id="Xamarin.Android.Google.Android.Flexbox" version="3.0.0.1" />
-                <dependency id="Xamarin.AndroidX.Annotation" version="1.3.0.4" />
-                <dependency id="Xamarin.AndroidX.Core" version="1.3.2.3" />
-                <dependency id="Xamarin.AndroidX.Fragment" version="1.2.5.5" />
-                <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.1.7" />
+                <dependency id="Xamarin.AndroidX.AppCompat" version="1.0.2.1" />
                 <dependency id="Xamarin.Google.Android.Material" version="1.4.0.6" />
+                <dependency id="Xamarin.Android.Google.Android.Flexbox" version="3.0.0.1" />
                 <dependency id="Xamarin.Google.Dagger" version="2.41.0.2" />
                 <dependency id="Xamarin.Kotlin.StdLib.Jdk8" version="1.6.10" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/Messaging.Bindings.Droid/bin/Release/Messaging.Bindings.Droid.dll" target="lib/monoandroid12.0/Messaging.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/Messaging.Bindings.Droid/bin/Release/Messaging.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
