--- a/nuget/Softeq.ZendeskSDKConfigurations.Droid.nuspec
+++ b/nuget/Softeq.ZendeskSDKConfigurations.Droid.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskSDKConfigurations.Droid</id>
-        <version>2.0.3.3</version>
+        <version>2.0.3</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,14 +10,14 @@
         <summary>Xamarin.Android binding library for Zendesk SDK Configurations</summary>
         <description>Zendesk SDK Configurations</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
-                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.3" />
+                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0" />
 
                 <dependency id="Xamarin.AndroidX.Annotation" version="1.3.0.4" />
                 <dependency id="Xamarin.Kotlin.StdLib.Jdk8" version="1.6.10" />
@@ -25,6 +25,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/ConfigurationSDK.Bindings.Droid/bin/Release/ConfigurationSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/ConfigurationSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/ConfigurationSDK.Bindings.Droid/bin/Release/ConfigurationSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
