--- a/nuget/Softeq.ZendeskSuas.nuspec
+++ b/nuget/Softeq.ZendeskSuas.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskSuas</id>
-        <version>1.2.0.3</version>
+        <version>1.2.0.1</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,16 +10,19 @@
         <summary>Xamarin.Android binding library for Zendesk Suas</summary>
         <description>Unidirectional data flow architecture implementation for Android</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
-            <group targetFramework="MonoAndroid" />
+            <group targetFramework="monoandroid" />
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/Suas.Bindings.Droid/bin/Release/Suas.Bindings.Droid.dll" target="lib/MonoAndroid/Suas.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/Suas.Bindings.Droid/bin/Release/Suas.Bindings.Droid.dll" target="lib/monoandroid" />
     </files>
 </package>
