--- a/nuget/Softeq.ZendeskSupport.Droid.nuspec
+++ b/nuget/Softeq.ZendeskSupport.Droid.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskSupport.Droid</id>
-        <version>5.0.2.3</version>
+        <version>5.1.0</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,35 +10,27 @@
         <summary>Xamarin.Android binding library for Zendesk Support SDK</summary>
         <description>Zendesk Support SDK</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
-                <dependency id="Softeq.ZendeskBelvedere" version="3.0.5.3" />
-                <dependency id="Softeq.ZendeskBelvedereCore" version="3.0.5.3" />
-                <dependency id="Softeq.ZendeskChatProviders.Droid" version="3.3.6.3" />
-                <dependency id="Softeq.ZendeskChat.Droid" version="3.3.6.3" />
-                <dependency id="Softeq.ZendeskChatSocketClient.Droid" version="6.1.3.3" />
-                <dependency id="Softeq.ZendeskChatVisitorClient.Droid" version="8.3.3.3" />
-                <dependency id="Softeq.ZendeskSDKConfigurations.Droid" version="2.0.3.3" />
-                <dependency id="Softeq.ZendeskCore.Droid" version="4.0.8.3" />
-                <dependency id="Softeq.ZendeskGuide.Droid" version="1.0.9.3" />
-                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.3" />
-                <dependency id="Softeq.ZendeskMessaging.Droid" version="5.2.5.3" />
-                <dependency id="Softeq.ZendeskMessagingAPI.Droid" version="5.2.5.3" />
-                <dependency id="Softeq.ZendeskSuas" version="1.2.0.3" />
-                <dependency id="Softeq.ZendeskSupportProviders.Droid" version="5.1.0.3" />
+                <dependency id="Softeq.ZendeskBelvedere" version="3.0.5" />
+                <dependency id="Softeq.ZendeskBelvedereCore" version="3.0.5" />
+                <dependency id="Softeq.ZendeskSDKConfigurations.Droid" version="2.0.3" />
+                <dependency id="Softeq.ZendeskCore.Droid" version="4.0.8" />
+                <dependency id="Softeq.ZendeskGuide.Droid" version="1.0.9" />
+                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0" />
+                <dependency id="Softeq.ZendeskMessaging.Droid" version="5.2.5" />
+                <dependency id="Softeq.ZendeskMessagingAPI.Droid" version="5.2.5" />
+                <dependency id="Softeq.ZendeskSupportProviders.Droid" version="5.1.0" />
 
                 <dependency id="GoogleGson" version="2.8.9.3" />
-                <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Square.Picasso" version="2.8.0.5" />
                 <dependency id="Xamarin.AndroidX.AppCompat" version="1.0.2.1" />
                 <dependency id="Xamarin.AndroidX.CardView" version="1.0.0.16" />
-                <dependency id="Xamarin.AndroidX.Core" version="1.3.2.3" />
-                <dependency id="Xamarin.AndroidX.Fragment" version="1.2.5.5" />
                 <dependency id="Xamarin.AndroidX.Legacy.Support.V4" version="1.0.0" />
                 <dependency id="Xamarin.AndroidX.MultiDex" version="2.0.1.13" />
                 <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.1.7" />
@@ -50,6 +42,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/SupportSDK.Bindings.Droid/bin/Release/SupportSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/SupportSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/SupportSDK.Bindings.Droid/bin/Release/SupportSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
