--- a/nuget/Softeq.ZendeskSupportProviders.Droid.nuspec
+++ b/nuget/Softeq.ZendeskSupportProviders.Droid.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskSupportProviders.Droid</id>
-        <version>5.1.0.3</version>
+        <version>5.1.0</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,19 +10,18 @@
         <summary>Xamarin.Android binding library for Zendesk Support SDK Providers</summary>
         <description>Zendesk Support SDK Providers</description>
         <releaseNotes>New release</releaseNotes>
-        <iconUrl>https://avatars.githubusercontent.com/u/11525</iconUrl>
-        <licenseUrl>https://github.com/Softeq/Zendesk-xamarin-android/blob/main/LICENSE</licenseUrl>
+        <license type="file">LICENSE.txt</license>
+        <icon>nuget-icon.png</icon>
         <projectUrl>https://github.com/Softeq/Zendesk-xamarin-android</projectUrl>
-        <copyright>Copyright 2021 Softeq Development Corp.</copyright>
+        <copyright>Copyright 2022 Softeq Development Corp.</copyright>
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
-                <dependency id="Softeq.ZendeskCore.Droid" version="4.0.8.3" />
-                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.3" />
-                <dependency id="Softeq.ZendeskGuideProviders.Droid" version="1.0.9.3" />
+                <dependency id="Softeq.ZendeskCore.Droid" version="4.0.8" />
+                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0" />
+                <dependency id="Softeq.ZendeskGuideProviders.Droid" version="1.0.9" />
 
                 <dependency id="GoogleGson" version="2.8.9.3" />
-                <dependency id="Square.OkHttp3" version="4.9.2.3" />
                 <dependency id="Square.Retrofit2" version="2.9.0" />
                 <dependency id="Xamarin.AndroidX.Annotation" version="1.3.0.4" />
                 <dependency id="Xamarin.Google.Dagger" version="2.41.0.2" />
@@ -31,6 +30,9 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/SupportProvidersSDK.Bindings.Droid/bin/Release/SupportProvidersSDK.Bindings.Droid.dll" target="lib/monoandroid12.0/SupportProvidersSDK.Bindings.Droid.dll" />
+        <file src="../LICENSE.txt" target="" />
+        <file src="../assets/nuget-icon.png" target="" />
+
+        <file src="../src/SupportProvidersSDK.Bindings.Droid/bin/Release/SupportProvidersSDK.Bindings.Droid.dll" target="lib/monoandroid12.0" />
     </files>
 </package>
